trunk/Archive2/ff/994a9b2e5ffdf3/output
main.cpp:5:6: warning: variable templates are a C++1y extension [-Wc++1y-extensions]
void callImpl( std::index_sequence<indices...> );
     ^
main.cpp:5:6: error: variable has incomplete type 'void'
main.cpp:5:21: error: no member named 'index_sequence' in namespace 'std'
void callImpl( std::index_sequence<indices...> );
               ~~~~~^
1 warning and 2 errors generated.
